Minimum Height Trees